add access token middleware on tasks
